[package]
name = "the-theorem-of-pythagora"
version = "0.1.0"
description = "An example generated using the simple template"
authors = ["wer-zen <zenwerden@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
color-eyre = "0.6.3"
rand = "0.9.1"
serde = "1.0.219"
serde_json = "1.0.140"
